[project]
name = "homework-9"
version = "0.1.0"
description = ""
authors = [
    {name = "TosLICK",email = "anatosliy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
